# hse-dsa-lab-2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_RU.md  conanfile.txt
.github/workflows/: debug.yml  release.yml
docs/: results.txt  submitted_solution.cpp
src/: main.cpp
src/common/: Point.h  Point.hpp  Rectangle.h  Rectangle.hpp  TestCaseGenerator.cpp  TestCaseGenerator.h  TestCaseGenerator.hpp
src/implementations/: AbstractImplementation.h  AbstractImplementation.hpp  NaiveRectangleEnumeration.cpp  NaiveRectangleEnumeration.h  NaiveRectangleEnumeration.hpp  PersistentSegmentTree.cpp  PersistentSegmentTree.h  PersistentSegmentTree.hpp  QubicMapBuilding.cpp  QubicMapBuilding.h  QubicMapBuilding.hpp
